// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing Expand component Matches the snapshot: shows expanded Expand component 1`] = `
<ul
  className="grade_lst"
>
  <li>
    <button
      className="expand"
      onClick={[Function]}
    >
      -
    </button>
  </li>
  <li>
    Test 1:
      
    78%
  </li>
  <li>
    Test 2:
      
    100%
  </li>
  <li>
    Test 3:
      
    92%
  </li>
  <li>
    Test 4:
      
    86%
  </li>
  <li>
    Test 5:
      
    89%
  </li>
  <li>
    Test 6:
      
    88%
  </li>
  <li>
    Test 7:
      
    91%
  </li>
  <li>
    Test 8:
      
    87%
  </li>
</ul>
`;

exports[`testing Expand component Matches the snapshot: shows non-expanded Expand component 1`] = `
<ul
  className="grade_lst"
>
  <li>
    <button
      className="expand"
      onClick={[Function]}
    >
      +
    </button>
  </li>
  <li />
</ul>
`;
